postgresql-common (40) unstable; urgency=low

  * debian/supported-versions: Add 8.1 to Ubuntu 5.10 to properly support
    backport.

 -- Martin Pitt <mpitt@debian.org>  Sat,  7 Jan 2006 12:59:07 +0100

postgresql-common (39) unstable; urgency=low

  * Add t/090_multicluster.t: Test multicluster operation and environment
    variable handling (PGCLUSTER, PGPORT).
  * pg_upgradecluster: When upgrading from < 8.1 to >= 8.1, check for users
    and groups with the same name and abort if there are any. Closes: #343622
  * t/040_upgrade.t: Add self test for above bug (clashing role names on
    upgrade).
  * testsuite: Run the tests twice; once with umask 022, once with umask 077.
  * Fix operation under umask 077:
    - pg_createcluster: Create /var/log/postgresql with mode 0755.
    - PgCommon.pm, set_cluster_start_conf(): Always create start.conf with
      0644 mode by default, but preserve permissions when changing the file.
    - pg_upgradecluster: Ensure correct permissions of the temporary
      pg_hba.conf that only allows superuser connections. Closes: #345670

 -- Martin Pitt <mpitt@debian.org>  Tue,  3 Jan 2006 20:27:10 +0100

postgresql-common (38) unstable; urgency=low

  * pg_ctlcluster: Remove --setuid option, it does not make too much sense
    after all and only confuses users. Closes: #343063
  * Remove pg_ctlcluster's -s option from all scripts.
  * pg_wrapper: Fix 'postgreqsl' typo in POD. Closes: #343938
  * pg_createcluster: Do not simply close STDOUT, but reopen it to /dev/null
    to avoid initdb complaining about invalid filehandles. Closes: #344180
  * debian/init.d-functions: Check if the requested version's postmaster is
    available before trying to start/stop a cluster to avoid errors when a
    server package is removed, but not purged. Closes: #343730

 -- Martin Pitt <mpitt@debian.org>  Thu, 22 Dec 2005 18:41:23 +0100

postgresql-common (37) unstable; urgency=low
